<resources>
	<string name="app_name" translatable="false">JDoc4droid</string>
	<string name="search">Search</string>
	<string name="placeholderText">Placeholder</string>
	<string name="downloadFromOracle">Download Java API docs</string>
	<string name="downloadFromCentral">Download from Maven Central</string>
	<string name="downloadFromMavenRepo">Download from custom Maven repository</string>
	<string name="artifactField">Artifact ID</string>
	<string name="groupField">Group ID</string>
	<string name="repoField">Repository</string>
	<string name="versionField">Version</string>
	<string name="downloadBtnText">Download</string>
	<string name="dismissBtnText">Dismiss</string>
	<string name="downloadFromZip">Use zip file</string>
	<string name="share">Share</string>
	<string name="deleteJavadoc">Delete Javadoc</string>
	<string name="updateJavadoc">Update Javadoc</string>
	<string name="downloadBtnContentDesc">download Javadoc</string>
	<string name="javadocDownloadError">Cannot download Javadoc</string>
	<string name="javadocUpdateError">Cannot update Javadoc</string>
	<string name="importJavadocError">Cannot import Javadoc</string>
	<string name="saveMetadataError">Cannot update Javadoc information</string>
	<string name="moveJavadocError">Cannot move Javadoc</string>
	<string name="loadJavadocError">Cannot load Javadocs</string>
	<string name="downloadOracleDocPrompt">Please download the Javadoc you want.</string>
	<string name="javadocUpdateErrorAlreadyLatestVersion">This Javadoc is already up-to-date.</string>
	<string name="deleteJavadocError">Cannot delete Javadoc</string>
	<string name="javaDownloadName11">Java 11</string>
	<string name="javaDownloadName8">Java 8</string>
	<string name="javaDownloadName17">Java 17</string>
	<string name="javaDownloadName21">Java 21</string>
	<string name="javaDownloadName25">Java 25</string>
	<string name="javaDownloadNameCustom">Select manually</string>
	<string name="filter">Filter</string>
	<string name="filter_options">Filter Options</string>
	<string name="settings">Settings</string>
	<string name="classHeaderDesc">header</string>
	<string name="selectionSpinnerText">section selection</string>
	<string name="showClassContentDesc">Content</string>
	<string name="downloaderContentDesc">Website</string>
	<string name="javadocListDesc">Javadoc List</string>
	<string name="repoLabelDesc">Repository label</string>
	<string name="groupIdLabelDesc">Group Id label</string>
	<string name="artifactIdLabelDesc">artifact Id label</string>
	<string name="versionLabelDesc">version label</string>
	<string name="moveJavadocUpBtnDesc">move Javadoc up</string>
	<string name="moveJavadocDownBtnDesc">Move Javadoc down</string>
	<string name="oracleContentInfo">This content is provided by Oracle Corporation (https://www.oracle.com/)</string>
	<string name="title_activity_settings">SettingsActivity</string>

	<!-- Preference Titles -->
	<string name="pref_title_javadocs">Javadocs</string>
	<string name="openJavadocsTypes">Open Javadocs</string>
	<string name="copy_to_clipboard">Copy to clipboard</string>
	<string name="open_external">Open in Browser</string>
	<string name="aboutGitHub">GitHub</string>
	<string name="pref_title_about">About</string>
	<string name="aboutLicenses">Licenses</string>
	<string name="pref_title_java_resources">Resources</string>
	<string name="devJavaLearnResource">Lean Java at dev.java</string>
	<string name="javaDocAndSpecResource">Javadocs and specs</string>
	<string name="pref_title_more_info">More</string>
	<string name="discordJUGInviteTitle">Discord Java Community | Help. Code. Learn.</string>
</resources>
