<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/downloadFromOracle" android:id="@+id/downloadFromOracle">
        <menu>

            <item
                android:id="@+id/oracleDownloadSelector8"
                android:title="@string/javaDownloadName8" />
            <item
                android:id="@+id/oracleDownloadSelector11"
                android:title="@string/javaDownloadName11" />
            <item
                android:id="@+id/oracleDownloadSelector17"
                android:title="@string/javaDownloadName17" />
            <item
                    android:id="@+id/oracleDownloadSelector21"
                    android:title="@string/javaDownloadName21" />
            <item
                android:id="@+id/oracleDownloadSelectorCustom"
                android:title="@string/javaDownloadNameCustom" />
        </menu>
    </item>
    <item android:title="@string/downloadFromCentral" android:id="@+id/downloadFromCentral" />
    <item android:title="@string/downloadFromMavenRepo" android:id="@+id/downloadFromMaven" />
    <item android:title="@string/downloadFromZip" android:id="@+id/downloadFromZip" ></item>
</menu>