<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/app_bar_filter"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:iconTint="@color/mainContrastColor"
        android:title="@string/filter"
        android:visible="false"
        app:showAsAction="ifRoom|withText">

        <menu></menu>
    </item>

    <item
        android:id="@+id/app_bar_share"
        android:icon="@android:drawable/ic_menu_share"
        android:iconTint="@color/mainContrastColor"
        android:title="@string/share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/app_bar_search"
        android:icon="@android:drawable/ic_menu_search"
        android:iconTint="@color/mainContrastColor"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />
</menu>