<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/popupBackground">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/repoLabelDesc"
        android:text="@string/repoField"
        android:textColor="@color/contrastColor"
        app:layout_constraintBottom_toBottomOf="@+id/artifactSelectorRepoSelector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/artifactSelectorRepoSelector" />

    <EditText
        android:id="@+id/artifactSelectorRepoSelector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/repoField"
        android:importantForAutofill="no"
        android:inputType="textUri"
        android:minHeight="48dp"
        android:textColor="@color/contrastColor"
        android:textColorHint="@color/mainContrastColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/groupIdLabelDesc"
        android:text="@string/groupField"
        android:textColor="@color/contrastColor"
        app:layout_constraintBottom_toBottomOf="@+id/artifactSelectorGroupSelector"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/artifactSelectorGroupSelector" />

    <EditText
        android:id="@+id/artifactSelectorGroupSelector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/groupField"
        android:importantForAutofill="no"
        android:inputType="textUri"
        android:minHeight="48dp"
        android:textColor="@color/contrastColor"
        android:textColorHint="@color/mainContrastColor"
        app:layout_constraintEnd_toEndOf="@+id/artifactSelectorRepoSelector"
        app:layout_constraintStart_toStartOf="@+id/artifactSelectorRepoSelector"
        app:layout_constraintTop_toBottomOf="@+id/artifactSelectorRepoSelector" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/artifactIdLabelDesc"
        android:text="@string/artifactField"
        android:textColor="@color/contrastColor"
        app:layout_constraintBottom_toBottomOf="@+id/artifactSelectorArtifactSelector"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/artifactSelectorArtifactSelector" />

    <EditText
        android:id="@+id/artifactSelectorArtifactSelector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/artifactField"
        android:importantForAutofill="no"
        android:inputType="textUri"
        android:minHeight="48dp"
        android:textColor="@color/contrastColor"
        android:textColorHint="@color/mainContrastColor"
        app:layout_constraintEnd_toEndOf="@+id/artifactSelectorGroupSelector"
        app:layout_constraintStart_toStartOf="@+id/artifactSelectorGroupSelector"
        app:layout_constraintTop_toBottomOf="@+id/artifactSelectorGroupSelector" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/versionLabelDesc"
        android:text="@string/versionField"
        android:textColor="@color/contrastColor"
        app:layout_constraintBottom_toBottomOf="@+id/artifactSelectorVersionSelector"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/artifactSelectorVersionSelector" />

    <EditText
        android:id="@+id/artifactSelectorVersionSelector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/versionField"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/contrastColor"
        android:textColorHint="@color/mainContrastColor"
        app:layout_constraintEnd_toEndOf="@+id/artifactSelectorArtifactSelector"
        app:layout_constraintStart_toStartOf="@+id/artifactSelectorArtifactSelector"
        app:layout_constraintTop_toBottomOf="@+id/artifactSelectorArtifactSelector" />

    <Button
        android:id="@+id/artifactSelectorDownloadBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/mainContrastColor"
        android:minHeight="48dp"
        android:text="@string/downloadBtnText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/artifactSelectorDismissBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/artifactSelectorVersionSelector" />

    <Button
        android:id="@+id/artifactSelectorDismissBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/mainContrastColor"
        android:minHeight="48dp"
        android:text="@string/dismissBtnText"
        app:layout_constraintBottom_toBottomOf="@+id/artifactSelectorDownloadBtn"
        app:layout_constraintEnd_toEndOf="@+id/artifactSelectorVersionSelector"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/artifactSelectorDownloadBtn"
        app:layout_constraintTop_toTopOf="@+id/artifactSelectorDownloadBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>