<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".ui.show.showclass.ShowClassActivity">

	<include
			android:id="@+id/include"
			layout="@layout/toolbar_actionbar"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

	<ScrollView
			android:id="@+id/scrollView2"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/include">

		<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

			<TextView
					android:id="@+id/headerView"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginStart="25dp"
					android:layout_marginEnd="25dp"
					android:autoSizeMaxTextSize="16sp"
					android:breakStrategy="simple"
					android:contentDescription="@string/classHeaderDesc"
					android:minHeight="48dp"
					android:textIsSelectable="true"
					android:textSize="16sp"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

			<Spinner
					android:id="@+id/mainSectionSpinner"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginStart="25dp"
					android:layout_marginTop="0dp"
					android:layout_marginEnd="25dp"
					android:contentDescription="@string/selectionSpinnerText"
					android:minHeight="48dp"
					android:textAlignment="viewEnd"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/headerView" />

			<Spinner
					android:id="@+id/middleSectionSpinner"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginStart="25dp"
					android:layout_marginTop="5dp"
					android:layout_marginEnd="25dp"
					android:contentDescription="@string/selectionSpinnerText"
					android:minHeight="48dp"
					android:textAlignment="viewEnd"
					android:visibility="gone"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/mainSectionSpinner" />

			<Spinner
					android:id="@+id/innerSelectionSpinner"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginStart="25dp"
					android:layout_marginTop="5dp"
					android:layout_marginEnd="25dp"
					android:contentDescription="@string/selectionSpinnerText"
					android:minHeight="48dp"
					android:textAlignment="viewEnd"
					android:visibility="gone"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/middleSectionSpinner" />

			<TextView
					android:id="@+id/contentView"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginStart="25dp"
					android:layout_marginTop="10dp"
					android:layout_marginEnd="25dp"
					android:contentDescription="@string/showClassContentDesc"
					android:minHeight="48dp"
					android:textIsSelectable="true"
					android:textSize="16sp"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/innerSelectionSpinner" />

		</androidx.constraintlayout.widget.ConstraintLayout>
	</ScrollView>

	<ProgressBar
			android:id="@+id/progressBar"
			style="?android:attr/progressBarStyle"
			android:layout_width="298dp"
			android:layout_height="298dp"
			app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
			app:layout_constraintEnd_toEndOf="@+id/scrollView2"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/include" />

</androidx.constraintlayout.widget.ConstraintLayout>